# saddogs

./: .gitignore  _index.html  data.html  graph-rescues.html  graph.html  index.html  insights.html
.github/workflows/: daily_scrape.yml  daily_summary.yml  saily_summary.yml  spider_health_check.yml
projects/saddogs-api/: main.py  pyproject.toml  requirements.txt
projects/saddogs-api/scripts/: add_census.py  fetch_census.py
projects/saddogs-dashboard/: index.html
projects/saddogs-dashboard/css/: styles.css
projects/saddogs-dashboard/js/: api.js  charts.js  config.js  dataProcessing.js  main.js  ui.js
