[project]
name = "saddogs-database"
version = "0.1.0"
description = ""
authors = [
    {name = "Jose Caballero",email = "jose.caballero@epicgames.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "supabase (>=2.28.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "saddogs-api"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
