[tool.poetry]
name = "saddogs-api"
version = "0.1.0"
description = ""
authors = ["Jose Caballero <jose.caballero@epicgames.com>"]
readme = "README.md"
packages = [{include = "saddogs_api"}]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = "^0.129.2"
uvicorn = "^0.41.0"
supabase = "^2.28.0"
saddogs-database = { path = "../../packages/saddogs-database" }



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
